k8s/staging/prefect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-deployment
  namespace: hypothesis-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-deployment
  template:
    metadata:
      labels:
        app: prefect-deployment
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: prefect-deployment
          image: abdum1964/hypothesis-generation-prefect-deployment:staging
          imagePullPolicy: Always
          command:
            - "bash"
            - "-c"
            - |
              uv run prefect work-pool create 'analysis-pool' --type process --overwrite &&
              uv run prefect work-pool update 'analysis-pool' --concurrency-limit 3 &&
              uv run prefect work-pool create 'interactive-pool' --type process --overwrite &&
              uv run prefect work-pool update 'interactive-pool' --concurrency-limit 10 &&
              uv run prefect concurrency-limit create harmonize_tag 2 || true &&
              uv run python src/deployments.py --ensembl-hgnc-map /app/data/ensembl_to_hgnc.pkl --hgnc-ensembl-map /app/data/hgnc_to_ensembl.pkl --go-map /app/data/go_map.pkl --swipl-host prolog-service --swipl-port 4242 &&
              uv run prefect worker start --pool 'analysis-pool' --name 'heavy-worker' &
              uv run prefect worker start --pool 'interactive-pool' --name 'light-worker' &
              tail -f /dev/null
          resources:
            limits:
              memory: "8Gi"
          volumeMounts:
            - name: app-source
              mountPath: /app
            - name: app-data
              mountPath: /app/data
      volumes:
        - name: app-source
          hostPath:
            path: /mnt/hdd_1/tesnim/hypothesis-generation_demo
        - name: app-data
          hostPath:
            path: /mnt/hdd_1/tesnim/hypothesis-generation_demo/data
