k8s/staging/prefect-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-service
  namespace: hypothesis-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-service
  template:
    metadata:
      labels:
        app: prefect-service
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: prefect-service
          image: rejuvebio/hypothesis-generation-prefect-service:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: prefect-service
  namespace: hypothesis-staging
spec:
  selector:
    app: prefect-service
  ports:
    - port: 4200
      targetPort: 4200
