k8s/staging/prolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prolog-service
  namespace: hypothesis-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prolog-service
  template:
    metadata:
      labels:
        app: prolog-service
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: prolog
          image: abdum1964/hypothesis-generation-prolog-service:staging-latest
          ports:
            - containerPort: 4242
          volumeMounts:
            - name: prolog-out-v2
              mountPath: /mnt/prolog_out_v2
            - name: prolog-out-v3
              mountPath: /mnt/prolog_out_v3
      volumes:
        - name: prolog-out-v2
          hostPath:
            path: /mnt/hdd_1/biocypher-kg/output/human/prolog_out_v2
        - name: prolog-out-v3
          hostPath:
            path: /mnt/hdd_1/biocypher-kg/output/human/prolog_out_v3
---
apiVersion: v1
kind: Service
metadata:
  name: prolog-service
  namespace: hypothesis-staging
spec:
  selector:
    app: prolog-service
  ports:
    - port: 4242
      targetPort: 4242
